// Протокол использует синтаксис proto3
syntax = "proto3";

// Импорт определения google.protobuf.Empty из стандартной библиотеки Protocol Buffers
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Опция go_package указывает путь к пакету Go, куда будут сгенерированы исходные файлы
option go_package = "gitlab.com/Morikue1/todo/api/protos/todo";

// Определение пакета userservice внутри файла .proto
package todoservice;

// Определение сервиса TodoService с методами RPC
service TodoService {

  rpc CreateToDo(ShortTodoDTO) returns (FullTodoDTO);

  rpc UpdateToDo(ShortTodoDTO) returns (FullTodoDTO);

  rpc GetTodoById(TodoID) returns (FullTodoDTO);

  rpc GetToDos(GetTodosRequest) returns (GetTodosResponse);

  rpc DeleteTodo(TodoID) returns (google.protobuf.Empty);
}

message TodoID {
  string id = 1;
}

message ShortTodoDTO {
  string id = 1;
  int32 created_by = 2;
  int32 assignee = 3;
  string description = 4;
}

message FullTodoDTO {
  string id = 1;
  int32 created_by = 2;
  int32 assignee = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message GetTodosRequest {
  int32 created_by = 1;
  int32 assignee = 2;
  google.protobuf.Timestamp date_from = 3;
  google.protobuf.Timestamp date_to = 4;
}

message GetTodosResponse {
  repeated FullTodoDTO items = 1;
}